force-app/main/default/objects/custom_create33__c/custom_create33__c.object-meta.xml
<CustomObject>
    <label>Custom created object33</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects33</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>