force-app/main/default/objects/custom_create33__c/fields/custom_create_33field569__c.field-meta.xml
<CustomField>
    <fullName>custom_create_33field569__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 33field569</label>
    <type>Checkbox</type>
</CustomField>